// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashHeader test  Should render navlink witthout active indicator 1`] = `
<li
  className=""
>
  <a
    className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
    href="/main"
    onClick={[Function]}
  >
    <div />
    <span
      className="text-base "
    >
      main
    </span>
  </a>
</li>
`;

exports[`DashHeader test  Should render the sidebar with setings as active 1`] = `
<div
  className="block lg:block page-sideNav fixed lg:static top-16 bottom-0"
>
  <div
    className=" overflow-auto flex-col h-[100%] pt-2 bg-indigo-100 dark:bg-dark-bg shadow-lg lg:shadow-none dark:shadow-border-dark"
  >
    <div
      className="list-none"
    >
      <li
        className=""
      >
        <a
          aria-current="page"
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 font-bold text-primary"
          href="/dashboard"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"
            />
            <path
              d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"
            />
          </svg>
          <span
            className="text-base "
          >
            Dashboard
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
          href="/tickets"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5 "
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
            />
            <path
              d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
            />
          </svg>
          <span
            className="text-base "
          >
            Tickets
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
          href="/calendar"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
              fillRule="evenodd"
            />
          </svg>
          <span
            className="text-base "
          >
            Calendar
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
          href="/settings"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5"
            fill="none"
            stroke="currentColor"
            strokeWidth={2}
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <path
              d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
          <span
            className="text-base "
          >
            Settings
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          aria-current="page"
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 font-bold text-primary"
          href="/dashboard/settings#link"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5 text-red-700 dark:text-red-600 hover:text-red-900"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z"
              fillRule="evenodd"
            />
          </svg>
          <span
            className="text-base text-red-700 dark:text-red-600 hover:text-red-900 "
          >
            Logout
          </span>
        </a>
      </li>
    </div>
  </div>
</div>
`;

exports[`DashHeader test  Should render with an active style 1`] = `
<li
  className=""
>
  <a
    aria-current="page"
    className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 font-bold text-primary"
    href="/main"
    onClick={[Function]}
  >
    <div />
    <span
      className="text-base "
    >
      main
    </span>
  </a>
</li>
`;
